--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,6 +8,7 @@
 
 
 
+
 .container {
     width: 100vw;
     max-width: 1440px;
@@ -408,6 +409,7 @@ nav {
 .info-tab {
     width: 100%;
     height: 100vh;
+    padding: 20px;
     background-color: white;
     position: absolute;
     top: 0;
@@ -444,8 +446,47 @@ nav {
 
     background-color: red;
     float: right;
+}
 
-    margin: 20px;
+
+h1 {
+    font-size: 15px;
+    margin-top: 50px;
+    font-family: welcome-text;
+    color: $blue;
+}
+
+
+.calc-process {
+    width: 100%;
+    height: 200px;
+    margin-top: 50px;
+}
+
+.step {
+    width: 100%;
+    height: 30px;
+    padding: 0 20px;
+    background-color: $blue;
+    color: $white;
+    border-radius: 5px;
+
+    margin-bottom: 30px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+
+    font-size: 20px;
+    font-family: welcome-text;
+}
+
+
+.arrow {
+    width: 15px;
+    height: 15px;
+    background-color: white;
 }
 
 
