--- a/scss/index.scss
+++ b/scss/index.scss
@@ -460,33 +460,104 @@ h1 {
 .calc-process {
     width: 100%;
     height: 200px;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .step {
     width: 100%;
-    height: 30px;
-    padding: 0 20px;
+    height: 35px;
+    overflow-y: hidden;
     background-color: $blue;
     color: $white;
     border-radius: 5px;
 
     margin-bottom: 30px;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     position: relative;
+
 
     font-size: 20px;
     font-family: welcome-text;
+}
+
+.step.active {
+    height: auto;
+    overflow-y: auto;
+}
+
+
+.head {    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 10px;
+    border-radius: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+
+
+.head.active {
+    background-color: $white;
+
+    p{
+        color: $blue;
+    }
+
+    .arrow {
+        border-color: $blue;
+    }
 }
 
 
 .arrow {
     width: 15px;
     height: 15px;
-    background-color: white;
+    border:  1px solid $white;
+    border-right: none;
+    border-top: none;
+
+    transform: rotate(-45deg) translateY(-8px);
+}
+
+
+.arrow.active {
+    transform: rotate(135deg) translateY(5px) translateX(10px);
+    transition: all 0.3s ease-in-out;
+}
+
+
+.dts {
+    padding: 20px;
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-150px);
+    transition: all 0.3s ease-in-out;
+
+    p {
+        margin:10px 0;
+    }
+
+    ul {
+        margin-top:20px;
+        padding: 0 20px;
+
+        li {
+            padding: 8px 0;
+        }
+    }
+}
+
+
+.dts.active {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0px);
+    display: block;
+
+    transition: all 0.5s ease-in-out;
 }
 
 
